# docchain

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
.github/workflows/: ci.yaml
docchain/: __init__.py  documents.py  exceptions.py  generator.py  settings.py  specs.py  utils.py
docchain/blocks/: __init__.py  base.py  json_schema.py  pydantic.py  text.py  ui_schema.py
docchain/generators/: __init__.py  base.py  pydantic.py  text.py
docchain/middleware/: __init__.py  base.py  collect_openai_stats.py  save_document.py
docchain/models/: gpt.py
docchain/output_parsers/: __init__.py  json_schema.py  ui_schema.py
docchain/steps/: __init__.py  base.py  collect_openai_stats.py  save_document.py
tests/: conftest.py  test_basic.py  test_blocks_json_schema.py  test_generator.py  test_generators_pydantic.py  test_generators_text.py  test_jinja.py  test_middleware_save_document.py  test_restart_on_failure.py  test_steps_save_document.py  test_utils.py
tests/examples/: examples.py
tests/testing/: blocks.py  middleware.py
